package engine

import (
	"context"
	"crypto/rand"
	"encoding/hex"
	"time"

	meshv1 "github.com/redbco/redb-open/api/proto/mesh/v1"
	"github.com/redbco/redb-open/services/mesh/internal/storage"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
)

type Server struct {
	meshv1.UnimplementedMeshServiceServer
	meshv1.UnimplementedMeshDataServiceServer
	engine *Engine
}

func NewServer(engine *Engine) *Server {
	return &Server{
		engine: engine,
	}
}

// generateID generates a simple unique ID string (simplified ULID-like)
func generateID() string {
	// Generate 16 random bytes and encode as hex (32 chars)
	bytes := make([]byte, 16)
	rand.Read(bytes)
	return hex.EncodeToString(bytes)
}

// Helper method to track operations
func (s *Server) trackOperation() func() {
	s.engine.TrackOperation()
	return s.engine.UntrackOperation
}

// MeshService methods

// SeedMesh creates a new mesh with this node as the first member
func (s *Server) SeedMesh(ctx context.Context, req *meshv1.SeedMeshReq) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	if req.MeshName == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_name is required")
	}

	// TODO: Implement mesh seeding logic
	// 1. Generate mesh_id (ULID) and mesh encryption keys
	// 2. Initialize mesh metadata in PostgreSQL
	// 3. Start WebSocket listener
	// 4. Create MCG (Mesh Control Group) with this node as first member
	// 5. Set mesh and node status to active

	meshID := generateID()
	nodeID := generateID()

	return &meshv1.MeshStatus{
		MeshId:   meshID,
		MeshName: req.MeshName,
		Nodes: []*meshv1.NodeInfo{
			{
				NodeId:   nodeID,
				NodeName: "seed-node",
				Status:   "ONLINE",
				LastSeen: time.Now().Unix(),
			},
		},
		Status:      "ACTIVE",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// JoinMesh joins an existing mesh by connecting to peer nodes
func (s *Server) JoinMesh(ctx context.Context, req *meshv1.JoinMeshReq) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if len(req.PeerEndpoints) == 0 {
		return nil, status.Error(codes.InvalidArgument, "peer_endpoints are required")
	}

	// TODO: Implement mesh joining logic
	// 1. Establish WebSocket connections to peer endpoints
	// 2. Perform handshake and exchange mesh configuration
	// 3. Join MCG for consensus participation
	// 4. Begin gossip protocol participation
	// 5. Establish connections to other reachable nodes

	return &meshv1.MeshStatus{
		MeshId:      req.MeshId,
		MeshName:    "joined-mesh",
		Status:      "ACTIVE",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// StartMesh starts the mesh service for an existing node/mesh configuration
func (s *Server) StartMesh(ctx context.Context, req *meshv1.StartMeshReq) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if req.NodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "node_id is required")
	}

	logger := s.engine.GetLogger()
	storage := s.engine.GetStorage()

	if storage == nil {
		return nil, status.Error(codes.Internal, "storage not available")
	}

	// TODO: Implement mesh startup logic
	// 1. Load mesh configuration from PostgreSQL
	// 2. Attempt reconnection to previously connected peers
	// 3. Resume normal operation or wait for incoming connections
	// 4. Start gossip protocol and Raft consensus groups
	// 5. Begin topology probes and LSA emission

	logger.Info("Starting mesh with configuration overrides")

	return &meshv1.MeshStatus{
		MeshId:      req.MeshId,
		MeshName:    "existing-mesh",
		Status:      "ACTIVE",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// StopMesh gracefully stops the mesh service
func (s *Server) StopMesh(ctx context.Context, req *meshv1.StopMeshReq) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}

	// TODO: Implement mesh shutdown logic
	// 1. Notify all other mesh nodes of shutdown
	// 2. Set node and link status to offline in database
	// 3. Close WebSocket connections gracefully
	// 4. Persist state for later recovery

	return &meshv1.MeshStatus{
		MeshId:      req.MeshId,
		Status:      "STOPPED",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// LeaveMesh permanently removes this node from the mesh
func (s *Server) LeaveMesh(ctx context.Context, req *meshv1.LeaveMeshReq) (*meshv1.SuccessStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}

	// TODO: Implement mesh leave logic
	// 1. Request consensus for node removal
	// 2. Clean up local state
	// 3. Close all connections

	return &meshv1.SuccessStatus{
		Success: true,
	}, nil
}

// EvictNode forcibly removes another node from the mesh
func (s *Server) EvictNode(ctx context.Context, req *meshv1.EvictNodeReq) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if req.TargetNodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "target_node_id is required")
	}

	// TODO: Implement node eviction logic
	// 1. Request consensus for node eviction (requires MCG consensus)
	// 2. Update topology and routing tables
	// 3. Notify remaining nodes

	return &meshv1.MeshStatus{
		MeshId:      req.MeshId,
		Status:      "ACTIVE",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// Topology management methods

// AddLink establishes a direct connection between two nodes
func (s *Server) AddLink(ctx context.Context, req *meshv1.AddLinkReq) (*meshv1.TopologyStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if req.SourceNodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "source_node_id is required")
	}
	if req.TargetNodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "target_node_id is required")
	}

	// TODO: Implement link addition logic
	// 1. Establish WebSocket connection between nodes
	// 2. Update link state database
	// 3. Emit LSA updates
	// 4. Trigger path recomputation

	linkInfo := &meshv1.LinkInfo{
		LinkId:        generateID(),
		SourceNodeId:  req.SourceNodeId,
		TargetNodeId:  req.TargetNodeId,
		LatencyMs:     req.LatencyMs,
		BandwidthMbps: req.BandwidthMbps,
		Status:        "UP",
	}

	return &meshv1.TopologyStatus{
		Success: true,
		Links:   []*meshv1.LinkInfo{linkInfo},
	}, nil
}

// DropLink removes a direct connection between two nodes
func (s *Server) DropLink(ctx context.Context, req *meshv1.DropLinkReq) (*meshv1.TopologyStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if req.SourceNodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "source_node_id is required")
	}
	if req.TargetNodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "target_node_id is required")
	}

	// TODO: Implement link removal logic
	// 1. Close WebSocket connection
	// 2. Update link state database
	// 3. Emit LSA updates
	// 4. Trigger fast reroute for affected paths

	return &meshv1.TopologyStatus{
		Success: true,
	}, nil
}

// EstablishFullLinks attempts to create full mesh connectivity
func (s *Server) EstablishFullLinks(ctx context.Context, req *meshv1.EstablishFullLinksReq) (*meshv1.TopologyStatus, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}

	// TODO: Implement full mesh establishment
	// 1. Get all nodes in mesh
	// 2. Attempt connections between all node pairs
	// 3. Update topology database

	return &meshv1.TopologyStatus{
		Success: true,
	}, nil
}

// Data publishing methods

// SendNodeUpdate publishes node-authorized updates
func (s *Server) SendNodeUpdate(ctx context.Context, req *meshv1.NodeUpdate) (*meshv1.BroadcastResult, error) {
	defer s.trackOperation()()

	if req.NodeId == "" {
		return nil, status.Error(codes.InvalidArgument, "node_id is required")
	}
	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}

	// TODO: Implement node update broadcasting
	// 1. Validate signature
	// 2. Update local node state
	// 3. Broadcast to all connected nodes
	// 4. Store in delivery log

	return &meshv1.BroadcastResult{
		Success:   true,
		MessageId: int64(time.Now().UnixNano()), // Use proper message ID
	}, nil
}

// SendMeshUpdate publishes mesh-wide updates (requires MCG consensus)
func (s *Server) SendMeshUpdate(ctx context.Context, req *meshv1.MeshUpdate) (*meshv1.BroadcastResult, error) {
	defer s.trackOperation()()

	if req.MeshId == "" {
		return nil, status.Error(codes.InvalidArgument, "mesh_id is required")
	}
	if req.UpdateType == "" {
		return nil, status.Error(codes.InvalidArgument, "update_type is required")
	}

	// TODO: Implement mesh update with MCG consensus
	// 1. Append to MCG log
	// 2. Wait for Raft commit
	// 3. Trigger guaranteed fanout to every node
	// 4. Use outbox pattern for reliability

	return &meshv1.BroadcastResult{
		Success:   true,
		MessageId: int64(time.Now().UnixNano()),
	}, nil
}

// SendInternalDBUpdate publishes database CDC replication events
func (s *Server) SendInternalDBUpdate(ctx context.Context, req *meshv1.DBUpdate) (*meshv1.BroadcastResult, error) {
	defer s.trackOperation()()

	if req.UpdateId == "" {
		return nil, status.Error(codes.InvalidArgument, "update_id is required")
	}
	if req.TableName == "" {
		return nil, status.Error(codes.InvalidArgument, "table_name is required")
	}
	if req.Operation == "" {
		return nil, status.Error(codes.InvalidArgument, "operation is required")
	}

	// TODO: Implement internal DB update replication
	// 1. Append to MCG log for mesh-wide propagation
	// 2. Wait for commit
	// 3. Each node applies to local PostgreSQL
	// 4. Track completion in delivery log

	return &meshv1.BroadcastResult{
		Success:   true,
		MessageId: int64(time.Now().UnixNano()),
	}, nil
}

// Client data stream methods

// OpenClientDataStream creates a new client data stream
func (s *Server) OpenClientDataStream(ctx context.Context, req *meshv1.OpenClientDataStreamReq) (*meshv1.StreamHandle, error) {
	defer s.trackOperation()()

	if req.TenantId == "" {
		return nil, status.Error(codes.InvalidArgument, "tenant_id is required")
	}
	if len(req.TargetNodes) == 0 {
		return nil, status.Error(codes.InvalidArgument, "target_nodes are required")
	}

	// TODO: Implement stream creation
	// 1. Form/join DSG for stream participants
	// 2. Elect Raft leader
	// 3. Assign stream_id and initialize committed_seq
	// 4. Precompute N best paths per target

	streamID := generateID()

	// Store stream in PostgreSQL
	stream := &storage.MeshStream{
		ID:       streamID,
		TenantID: req.TenantId,
		DstNodes: req.TargetNodes,
		QoS:      req.Qos,
		Priority: int(req.Priority),
		Created:  time.Now(),
	}
	_ = stream // TODO: Store in database

	return &meshv1.StreamHandle{
		StreamId:    streamID,
		TenantId:    req.TenantId,
		TargetNodes: req.TargetNodes,
		Status:      "ACTIVE",
		CreatedAt:   time.Now().Unix(),
	}, nil
}

// CloseClientDataStream closes an existing client data stream
func (s *Server) CloseClientDataStream(ctx context.Context, req *meshv1.StreamHandle) (*emptypb.Empty, error) {
	defer s.trackOperation()()

	if req.StreamId == "" {
		return nil, status.Error(codes.InvalidArgument, "stream_id is required")
	}

	// TODO: Implement stream closure
	// 1. Flush pending messages
	// 2. Update stream status in database
	// 3. Notify DSG members
	// 4. Clean up routing state

	return &emptypb.Empty{}, nil
}

// PublishClientData publishes encrypted client data chunks
func (s *Server) PublishClientData(ctx context.Context, req *meshv1.Chunk) (*meshv1.PublishResult, error) {
	defer s.trackOperation()()

	if req.StreamId == "" {
		return nil, status.Error(codes.InvalidArgument, "stream_id is required")
	}
	if req.TenantId == "" {
		return nil, status.Error(codes.InvalidArgument, "tenant_id is required")
	}
	if len(req.Payload) == 0 {
		return nil, status.Error(codes.InvalidArgument, "payload is required")
	}

	// TODO: Implement client data publishing
	// 1. Encrypt payload with tenant-specific keys
	// 2. Persist chunk to outbox
	// 3. Append to DSG log
	// 4. On Raft commit, schedule chunk across paths
	// 5. Track delivery to all target nodes

	messageID := generateID()

	// Store in outbox
	outboxEntry := &storage.MeshOutbox{
		StreamID:  req.StreamId,
		MessageID: messageID,
		Payload:   req.Payload,
		Status:    storage.OutboxStatusPending,
		Created:   time.Now(),
	}
	_ = outboxEntry // TODO: Store in database

	return &meshv1.PublishResult{
		Success:   true,
		MessageId: int64(time.Now().UnixNano()),
	}, nil
}

// Status and monitoring methods

// GetMeshStatus returns comprehensive mesh state
func (s *Server) GetMeshStatus(ctx context.Context, req *emptypb.Empty) (*meshv1.MeshStatus, error) {
	defer s.trackOperation()()

	// TODO: Implement comprehensive status collection
	// 1. Get mesh configuration from PostgreSQL
	// 2. Collect node information and statuses
	// 3. Get link state database information
	// 4. Collect Raft group statuses
	// 5. Determine overall mesh health

	return &meshv1.MeshStatus{
		MeshId:      "current-mesh-id",
		MeshName:    "example-mesh",
		Status:      "ACTIVE",
		LastUpdated: time.Now().Unix(),
	}, nil
}

// WatchMeshEvents streams real-time mesh events
func (s *Server) WatchMeshEvents(req *meshv1.Filter, stream meshv1.MeshService_WatchMeshEventsServer) error {
	defer s.trackOperation()()

	// TODO: Implement event streaming
	// 1. Subscribe to topology changes
	// 2. Subscribe to node state changes
	// 3. Subscribe to consensus events
	// 4. Stream filtered events to client

	// Mock event for now
	event := &meshv1.MeshEvent{
		EventId:   generateID(),
		EventType: "NODE_JOINED",
		Timestamp: time.Now().Unix(),
	}

	return stream.Send(event)
}

// MeshDataService methods (server-side streams)

// SubscribeNodeUpdates streams node updates to subscribers
func (s *Server) SubscribeNodeUpdates(req *meshv1.SubscribeReq, stream meshv1.MeshDataService_SubscribeNodeUpdatesServer) error {
	defer s.trackOperation()()

	// TODO: Implement node update streaming
	// 1. Apply tenant filters
	// 2. Subscribe to node update events
	// 3. Stream updates with backpressure control
	// 4. Handle client disconnect gracefully

	return nil
}

// SubscribeMeshUpdates streams mesh-wide updates to subscribers
func (s *Server) SubscribeMeshUpdates(req *meshv1.SubscribeReq, stream meshv1.MeshDataService_SubscribeMeshUpdatesServer) error {
	defer s.trackOperation()()

	// TODO: Implement mesh update streaming
	return nil
}

// SubscribeInternalDBUpdates streams internal DB updates to subscribers
func (s *Server) SubscribeInternalDBUpdates(req *meshv1.SubscribeReq, stream meshv1.MeshDataService_SubscribeInternalDBUpdatesServer) error {
	defer s.trackOperation()()

	// TODO: Implement DB update streaming
	return nil
}

// SubscribeClientData streams client data to subscribers with exactly-once delivery
func (s *Server) SubscribeClientData(req *meshv1.StreamSelector, stream meshv1.MeshDataService_SubscribeClientDataServer) error {
	defer s.trackOperation()()

	if req.TenantId == "" {
		return status.Error(codes.InvalidArgument, "tenant_id is required")
	}

	// TODO: Implement client data streaming
	// 1. Apply tenant and stream filters
	// 2. Decrypt tenant-specific data
	// 3. Ensure exactly-once delivery semantics
	// 4. Handle acknowledgments and offset advancement
	// 5. Implement backpressure via credit windows

	return nil
}
